--- a/css/login.css
+++ b/css/login.css
@@ -1,52 +1,11 @@
-/* *{
-	padding: 0;
-	margin: 0;
-    box-sizing: border-box;
-}
-
-body{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr)
-}
-
-.login{
-    display: flex;
-    background-color: #3F3D56;
-    grid-column: 1/2;
-    grid-row: 1/3;
-
-}
-
-img{
-    display: flex;
-    grid-column: 2/3;
-    grid-row: 1/2;
-
-}
-
-/* .container:before {
-    content: "";
-    position: absolute;
-    height: 1500px;
-    width: 2000px;
-    top: -10%;
-    right: 48%;
-    transform: translateY(-50%);
-    background-image: linear-gradient(-45deg, #D61C6C 0%, #3F3D56 100%);
-    transition: 1.8s ease-in-out;
-    border-radius: 50%;
-    z-index: -1;
-  } */
-
-  *{
+ *{
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
 
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Raleway', sans-serif;
     overflow: hidden;
 }
 
@@ -96,13 +55,6 @@ form{
     height: 100px;
 }
 
-.login-content h2{
-	margin: 15px 0;
-	color: #333;
-	text-transform: uppercase;
-	font-size: 2.9rem;
-}
-
 .login-content .input-div{
 	position: relative;
     display: grid;
@@ -148,7 +100,7 @@ form{
 	bottom: -2px;
 	width: 0%;
 	height: 2px;
-	background-color: #38d39f;
+	background-color: #4D3F92;
 	transition: .4s;
 }
 
@@ -170,7 +122,7 @@ form{
 }
 
 .input-div.focus > .i > i{
-	color: #38d39f;
+	color: #4D3F92;
 }
 
 .input-div > div > input{
@@ -185,7 +137,7 @@ form{
 	padding: 0.5rem 0.7rem;
 	font-size: 1.2rem;
 	color: #555;
-	font-family: 'poppins', sans-serif;
+	font-family: 'Raleway', sans-serif;
 }
 
 .input-div.pass{
@@ -202,7 +154,7 @@ a{
 }
 
 a:hover{
-	color: #38d39f;
+	color: #4D3F92;
 }
 
 .btn{
@@ -212,11 +164,11 @@ a:hover{
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-image: linear-gradient(to right, #4D3F92, #0B71C4, #328FCD);
 	background-size: 200%;
 	font-size: 1.2rem;
 	color: #fff;
-	font-family: 'Poppins', sans-serif;
+	font-family: '', sans-serif;
 	text-transform: uppercase;
 	margin: 1rem 0;
 	cursor: pointer;
