--- a/css/styles.css
+++ b/css/styles.css
@@ -166,3 +166,12 @@ li, ul {
   color: aliceblue;
   text-decoration: none;
 }
+
+#search{
+  display: flex;
+}
+
+.active-cyan-2 input.form-control[type=text]:focus:not([readonly]) {
+  border-bottom: 1px solid #4dd0e1;
+  box-shadow: 0 1px 0 0 #4dd0e1;
+}
