--- a/css/login.css
+++ b/css/login.css
@@ -144,18 +144,7 @@ form{
 	margin-bottom: 4px;
 }
 
-a{
-	display: block;
-	text-align: right;
-	text-decoration: none;
-	color: #999;
-	font-size: 0.9rem;
-	transition: .3s;
-}
-
-
-
-.btn, .btn-google{
+.btn{
 	display: block;
 	width: 100%;
 	height: 50px;
@@ -173,15 +162,13 @@ a{
 	transition: .5s;
 }
 
-.btn-google{
-	width: 60%;
-	height: 30px;
+.btn-social{
+	height: 40px;
 	font-size: 0.7rem;
-	background-image: linear-gradient(to right, #1d8f90, #13c2eb, #79ddf5);
 	margin: auto;
 	margin-bottom: 2em;
 	text-align: center;
-	color: #fff;
+	padding-right: 1em;
 }
 
 .btn:hover, .btn-google:hover{
