--- a/css/styles.css
+++ b/css/styles.css
@@ -180,4 +180,15 @@ li, ul {
   margin-top: 0px !important;
 }
 
+input[type=number].form-control::-webkit-inner-spin-button, 
+input[type=number].form-control::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
 
+
+@media screen and (max-width: 700px){
+	.img{
+		display: none;
+	}
+}
